# voxelverse

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakelists.txt  LICENSE.txt  README.md  conanfile.py
.github/workflows/: cmake.yml
lib/glfw-3.3.8/include/GLFW/: glfw3.h
lib/glfw-3.3.8/src/: CMakeLists.txt  window.c
lib/glm-0.9.9.8/: CMakeLists.txt  manual.md
lib/glm-0.9.9.8/cmake/glm/: glmConfig.cmake
lib/glm-0.9.9.8/glm/ext/: matrix_clip_space.hpp
lib/leveldb-1.23/util/: env_windows.cc
lib/mve/: CMakeLists.txt
lib/mve/include/mve/: common.hpp  include_vma.hpp  include_vulkan.hpp  monitor.hpp  renderer.hpp  shader.hpp  vertex_data.hpp  window.hpp
lib/mve/include/mve/detail/: defs.hpp  descriptor_set.inl  descriptor_set_allocator.hpp  framebuffer.inl  fwd.hpp  graphics_pipeline.inl  include_vulkan.hpp  index_buffer.inl  resources.hpp  resources.inl  texture.inl  types.hpp  uniform_buffer.inl  vertex_buffer.inl
lib/mve/include/mve/math/: math.hpp
lib/mve/include/mve/math/detail/: functions.inl  matrix3.inl  matrix4.inl  quaternion.inl  vector2.inl  vector2i.inl  vector3.inl  vector3i.inl  vector4.inl  vector4i.inl
lib/mve/src/: descriptor_set_allocator.cpp  descriptor_set_allocator.hpp  fixed_allocator.hpp  logger.cpp  logger.hpp  monitor.cpp  renderer.cpp  renderer_utils.hpp  resource_arena.hpp  shader.cpp  structs.hpp  vertex_data.cpp  window.cpp
shaders/: simple.vert
src/: app.cpp  app.hpp  camera.cpp  camera.hpp  chunk_column.cpp  chunk_column.hpp  chunk_controller.cpp  chunk_controller.hpp  chunk_data.cpp  chunk_data.hpp  chunk_mesh.cpp  chunk_mesh.hpp  common.hpp  descriptor_set.cpp  descriptor_set.hpp  descriptor_set_layout.cpp  descriptor_set_layout.hpp  framebuffer.cpp  framebuffer.hpp  frustum.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  index_buffer.cpp  index_buffer.hpp  lighting.cpp  lighting.hpp  logger.cpp  logger.hpp  main.cpp  monitor.cpp  monitor.hpp  mve.cpp  mve.hpp  nine_patch.cpp  nine_patch.hpp  options.cpp  player.cpp  player.hpp  renderer.cpp  renderer.hpp  (+39 more)
src/client/: app.cpp  app.hpp  chunk_column.hpp  chunk_controller.cpp  chunk_controller.hpp  chunk_data.cpp  chunk_data.hpp  chunk_mesh.cpp  chunk_mesh.hpp  common.hpp  frustum.hpp  lighting.cpp  lighting.hpp  logger.cpp  logger.hpp  main.cpp  options.cpp  options.hpp  player.cpp  player.hpp  save_file.cpp  save_file.hpp  text_buffer.hpp  text_pipeline.cpp  text_pipeline.hpp  ui_pipeline.cpp  ui_pipeline.hpp  util.cpp  util.hpp  wire_box_mesh.cpp  wire_box_mesh.hpp  world.cpp  world.hpp  world_data.cpp  world_data.hpp  world_generator.cpp  world_generator.hpp  world_renderer.cpp  world_renderer.hpp
src/client/shader/: color.frag  simple.frag  text.frag  text.vert  ui.frag  ui.vert
src/client/ui/: button.cpp  button.hpp  console.cpp  console.hpp  crosshair.cpp  crosshair.hpp  debug_overlay.cpp  debug_overlay.hpp  hotbar.cpp  hotbar.hpp  hud.cpp  hud.hpp  nine_patch.cpp  nine_patch.hpp  options_menu.cpp  options_menu.hpp  pause_menu.cpp  pause_menu.hpp
src/common/: assert.hpp  fixed_loop.cpp  logger.cpp  logger.hpp
src/math/: functions.cpp  functions.hpp  math.hpp  matrix3.cpp  matrix3.hpp  matrix4.cpp  matrix4.hpp  quaternion.cpp  quaternion.hpp  vector2.cpp  vector2.hpp  vector2i.cpp  vector2i.hpp  vector3.cpp  vector3.hpp  vector3i.cpp  vector3i.hpp  vector4.cpp  vector4.hpp  vector4i.cpp  vector4i.hpp
src/math/detail/: functions.inl  matrix3.inl  matrix4.inl  quaternion.inl  vector2.inl  vector2i.inl  vector3.inl  vector3i.inl  vector4.inl  vector4i.inl
src/mve/: common.hpp  framebuffer.hpp  index_buffer.hpp  monitor.cpp  monitor.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  uniform_buffer.cpp  vertex_buffer.hpp  vertex_data.cpp  window.cpp  window.hpp
src/mve/detail/: defs.hpp  descriptor_set.inl  framebuffer.inl  graphics_pipeline.inl  index_buffer.inl  texture.inl  uniform_buffer.inl  vertex_buffer.inl
src/mve/math/: math.hpp
src/mve/math/detail/: matrix3.inl  matrix4.inl  quaternion.inl  vector2.inl  vector2i.inl  vector3.inl  vector3i.inl  vector4.inl  vector4i.inl
src/server/: server.cpp  server.hpp
src/shader/: simple.frag  simple.vert  text.frag  text.vert  ui.frag
src/ui/: button.cpp  button.hpp  console.cpp  console.hpp  crosshair.cpp  crosshair.hpp  debug_overlay.cpp  debug_overlay.hpp  hotbar.cpp  hotbar.hpp  hud.cpp  hud.hpp  nine_patch.cpp  nine_patch.hpp  options_menu.cpp  options_menu.hpp  pause_menu.cpp  pause_menu.hpp
src/util/: fixed_loop.cpp  fixed_loop.hpp
tests/: uniform_buffer_layout.cpp  uniform_struct_layout.cpp  vertex_data.cpp
tests/mve/math/: functions.cpp
